k8s/deployment-main.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: awallet
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: awallet-web-main-landing-deployment
  namespace: awallet
spec:
  selector:
    matchLabels:
      app: awallet-web-main-landing
  replicas: 3
  template:
    metadata:
      labels:
        app: awallet-web-main-landing
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
        - name: awallet-web-main-landing
          image: scholtz2/a-wallet:1.2026.01.26-main
          imagePullPolicy: Always
          ports: 
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 5  
            failureThreshold: 2
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 20
            timeoutSeconds: 5  
            failureThreshold: 2
            terminationGracePeriodSeconds: 1
          volumeMounts:
            - name: awallet-main-conf
              mountPath: /app/config.json
              subPath: config.json
      volumes:
        - name: awallet-main-conf
          configMap:
            name: awallet-main-conf
            
---

apiVersion: v1
kind: Service
metadata:
  name: awallet-service-landing
  namespace: awallet
spec:
  type: ClusterIP
  selector:
    app: awallet-web-main-landing
  ports:
    - name: http
      protocol: TCP
      appProtocol: http
      port: 8080
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awallet-web-main
  namespace: awallet
  annotations: 
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - main.h3.a-wallet.net
    secretName: tls-main.h3.a-wallet.net
  rules:
  - host: main.h3.a-wallet.net
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: awallet-service-landing
            port:
              number: 8080
